Changes to clean up strings.xml, eliminate some Lint warnings. Add build.xml for ODKSensors.jar construction.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,55 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, SensorDataProviderActivity!</string>
-    <string name="app_name">ODKSensors</string>
-    <string name="Welcome">Welcome to the ADK service testing activity!</string>
-    <string name="resetDeviceViewLabel">Reset view...</string>
-    <string name="deviceInfoTitle">Device Information:</string>
+    <string name="app_name">ODK Sensors</string>
     <string name="empty"></string>
-    <string name="exitAppTitle">Exit the application</string>
-    <string name="errorTitle">Error messages go here</string>
-    <string name="longString">This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 2nd: This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 3rd: This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 4th: This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 5th: This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 6th: This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 7th: This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 8th: This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 9th This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well. 10th:This string is really really long so it can be used to test layout areas that may behave strangely when long text is included.  Can you still read this text?  Did you have to scroll down to see it?  Hopefully you can read it all.  Normally, that means things are going fairly well.</string>
-    <string name="reSearchUSBAccessories">Click here to search USB devices again</string>
-    <string name="closeDeviceLabel">Close device connection...</string>
-    <string name="Space">   </string>
-    <string name="deviceOutputLabel">Potentiometer position</string>
-    <string name="resistLongTitle">Long side resistance (KOhms)</string>
-    <string name="resistShortTitle">Short side resistance (KOhms)</string>
-    <string name="ledSliderTitle">LED brightness : slide to set!</string>
-    <string name="resistIDTitle">Potentiometer Position Indicator</string>
-    <string name="noDeviceMessage">No device connected...\nPlease unplug and/or replug device to continue</string>
-    <string name="examplePacket">Packet: example Type: setup Data: 0x00 00 00 00</string>
-    <string name="packetsReceivedTitle">Packets received:</string>
-    <string name="A3PServiceTestTitle">A3P Service Test Utility</string>
-    <string name="testButtonLabel">Test A3P binding</string>
-    <string name="msIntervalTitle">Interval to set:</string>
-    <string name="deviceLabel">Device 0:  </string>
-    <string name="deviceLabel1">Device 1:  </string>
-    <string name="deviceLabel2">Device 2:  </string>
-    <string name="serviceInfoTitle">Service Information:</string>
-    <color name="DarkGray">#FF333333</color>
-    <string name="StartText">Start</string>
-    <string name="StopText">Stop</string>
-    <string name="CheckText">Check</string>
-    <color name="Green">#FF00BB00</color>
-    <color name="Red">#FFCC0000</color>
-    <color name="Blue">#FF0000FF</color>
-    <string name="get1text">Get 1</string>
-    <string name="get5text">Get 5</string>
-    <string name="getalltext">Get all</string>
-    <string name="interval250ms">250ms</string>
-    <string name="interval1000ms">1 sec</string>
-    <string name="interval5000ms">5 sec</string>
-    <string name="setIntervalText">Get all packets</string>
     <string name="StarterAppName">Sensor Service Starter</string>
-    <string name="BindText">Bind</string>
-    <string name="UnBindText">Unbind</string>
-    <string name="interval10000ms">10 sec</string>
-    <string name="interval60000ms">60 sec</string>
-    <color name="White">#FFFFFFFF</color>
-    <string name="mainActivityString">Main Activity</string>
-    <string name="usbTestString">USB Test Activity</string>
-    <string name="chooserString">Sensor Data Provider</string>
     <string name="usbSensorSelection">Select a USB sensor</string>
-    <string name="register">Register</string>
+    <string name="add_usb_device">Add USB Device</string>
+    <string name="add_bluetooth_device">Add Bluetooth Device</string>
+    <string name="help">Help</string>
+    <string name="sensor_ready">SENSOR READY</string>
+    <string name="record_from_sensor">Single Click: RECORD FROM SENSOR</string>
+    <string name="update_metadata">Long Click: UPDATE METADATA</string>
+    <string name="sensor_out_of_range">SENSOR OUT OF RANGE</string>
+    <string name="open_record">Single Click: OPEN RECORD</string>
+    <string name="register_sensor">REGISTER SENSOR</string>
+    <string name="register">Single Click: REGISTER</string>
+    <string name="new_device_in_range">NEW DEVICE IN RANGE</string>
+    <string name="pair_device_with_phone">Single Click: PAIR PHONE WITH DEVICE</string>
+    <string name="long_click_no_action">Long Click: No Action</string>
+    <string name="single_click_no_action">Single Click: No Action</string>
+    <string name="not_a_sensor">NOT A SENSOR</string>
+    <string name="select_sensor_type">Select Sensor Type</string>
 </resources>
