--- a/sensorsframework_app/src/main/res/values/strings.xml
+++ b/sensorsframework_app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="long_click_no_action">Long Click: No Action</string>
     <string name="single_click_no_action">Single Click: No Action</string>
     <string name="not_a_sensor">NOT A SENSOR</string>
+    <string name="select_sensor_type">Select Sensor Type</string>
 </resources>
